fix(ProjectService): 정적 분석을 통해 수정이 필요한 부분 수정